# cobot

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml
src/cobot/: __init__.py  bluetooth.py  cobot.py
