[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cobot"
version = "0.1.0"
authors = [
  { name="Hrishabh Mittal", email="hrishabhmittal.hm@gmail.com" },
]
description = "A TCP communicator for cobot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
